refactored the header component

--- a/my-app/src/sass/_variables.scss
+++ b/my-app/src/sass/_variables.scss
@@ -8,6 +8,27 @@ $accent_black:#000000;
 $white_color:#ffffff;
 $tertiary_grey:#564d4d;
 
+
+// Color palette Rick
+$rick_turquoise: #AEE6E3;
+$rick_blue: #BBE0F2;
+$rick_light_grey:#DBD6D0;
+$rick_dark_grey:#756951;
+$rick_white: #FCFAFB;
+
+// Color palette Morty 
+
+$morty_dark_blue: #2F4368;
+$morty_yellow: #FAF76B;
+$morty_brown: #87501F;
+$morty_light_orange:#F7C49D;
+$morty_white: #EAEAEA;
+
+
+
+
+
+
 // Fonts
 
 $standard_font_size: 1rem; // 16px
