--- a/my-app/src/sass/utilities.scss
+++ b/my-app/src/sass/utilities.scss
@@ -9,4 +9,16 @@
 }
 
 
+.v-padding {
+    &-medium {
+        padding: $size_medium 0;
+    }
+
+    &-large {
+        padding:$size_large 0
+    }
+    
+}
+
+
 
