--- a/my-app/src/sass/components/header.scss
+++ b/my-app/src/sass/components/header.scss
@@ -10,8 +10,17 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
+@mixin flex__vertical-align {
+    display:flex;
+    align-items: center
+}
+
+
+
+
 .header__rick {
     @include header-spacing;
+    
     background-color: $rick_turquoise;
     & nav ul {
         color: $rick_dark_grey
@@ -27,7 +36,7 @@
 .header__morty {
     @include header-spacing;
     background-color:$morty_dark_blue;
-
+    
     & nav ul {
         color: $morty_yellow;
         
@@ -40,10 +49,26 @@
     }
 }
 
-
-nav ul {
-    @include space-between;
-    color: $white_color;
-    list-style:none
+nav {
+    width:100%;
+    & ul {
+        @include space-between;
+        color: $white_color;
+        list-style:none;
+        margin-bottom:0;
+    }
 }
 
+
+.header__menu-wrapper,
+.theme-toggle__wrapper
+ {
+    @include flex__vertical-align
+}
+
+.theme-toggle__wrapper {justify-content: flex-end;
+    & button {
+        border:none;
+        font-size:$standard_font_size;
+        font-weight: 700;
+    }}
