--- a/my-app/src/sass/style.scss
+++ b/my-app/src/sass/style.scss
@@ -6,6 +6,6 @@
 @import './components/autentification.scss';
 
 main {
-    background-color:$white_color;
-    color:$accent_black
+    background-color:$morty_white;
+    color:black;
 }
