Added private route and log out feature

--- a/my-app/src/sass/style.scss
+++ b/my-app/src/sass/style.scss
@@ -7,5 +7,11 @@
 
 main {
     background-color:$morty_white;
-    color:black;
+    color:#000000;
+}
+
+p,
+li,
+blockquote {
+    color: #000000;
 }
