--- a/my-app/src/sass/components/autentification.scss
+++ b/my-app/src/sass/components/autentification.scss
@@ -21,7 +21,7 @@
         left: 0;
         margin: auto;
         width: 400px;
-        height: 300px;
+        height: auto;
         background: $morty_yellow;
         form {
             display: flex;
