--- a/my-app/src/sass/components/header.scss
+++ b/my-app/src/sass/components/header.scss
@@ -117,6 +117,13 @@ nav {
                 transform:rotate(45deg);
 
             }
+
+            & button {
+                border: none; 
+                background-color: $morty_dark_blue;
+                color: $morty_white;
+                padding: $base-size / 2 $base-size;
+            }
         }
 
         &__avatar {
