--- a/my-app/src/sass/components/grid.scss
+++ b/my-app/src/sass/components/grid.scss
@@ -1,19 +1,75 @@
 .homepage-grid {
-    @include space-between;
+    @include flex-start;
     flex-wrap: wrap;
-    row-gap:2rem;
+    row-gap:$size_large;
+    column-gap: $size_medium;
 
     &__item {
-        flex: 0 0 calc(100% / 4 - $size_medium);
+        flex: 0 0 calc(100% / 4 - $base-size * 1.5);
         width:100%;
         display:flex;
-        justify-content: center;
         flex-direction: column;
-            div { margin-top:$base-size / 2;
-                span {
+        position: relative;
+        border-radius: $base-size / 2;
+        transition: transform .05s linear;
+        padding: 1rem;
+        overflow: hidden;
+        
+        @media(max-width: 820px) {
+            flex: 0 0 calc(100% / 2 - $base-size * 1.5)
+        }
+        @media(max-width: 500px) {
+            flex: 0 0 calc(100%)
+        }
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 1px 1px 16px 0px rgba(0,0,0,0.4);
+        }
+
+        &.rick {
+            background:  $rick_turquoise;
+        }
+
+        &.morty {
+            background: transparentize($color: $morty_dark_blue, $amount: 0.8);
+            color: $morty_dark_blue;
+            
+            &:hover {
+                background: transparentize($color: $morty_dark_blue, $amount: 0.2);
+                color: $morty_white;
+            }
+            
+        }
+        div { margin-top:$base-size / 2;
+            
+            span {
                     min-width: $size_xlarge * 4;
                     font-weight:700;
-                }}
+                }
+        }
+
+        & .image-wrapper {
+            position: relative;
+            margin-top:0;
+            display: flex;
+            align-items: center;
+            
+            &.Dead::after,
+            &.Dead::before {
+                content: "";
+                position: absolute;
+                background: rgba(255, 0, 0, 1);
+                width: 100%;
+                height: 10%;
+                border-radius: $base-size / 2;
+            }
+
+            &.Dead::before {transform: rotate(-45deg);}
+            &.Dead::after {transform: rotate(45deg);}
+            img {
+                width:100%;
+            }
+        }
         
     }
 }
@@ -22,6 +78,7 @@
     &__item{
         flex: 0 0 100%;
         width: 100%;
+        flex-wrap: wrap;
         display: flex;
         gap: $size_medium;
         margin:$size_medium 0;
@@ -30,27 +87,80 @@
         .content-wrapper {
             width: 100%;
             max-width: 50%;
+            @media(max-width:820px) {
+                max-width: 100%;
+            }
             div {display: flex;
                 padding:$base-size / 2 0;
                 border-bottom:1px solid transparentize($rick_dark_grey, 0.5);
+                @media(max-width:500px) {
+                    justify-content: space-between;
+                }
                 span {
                     min-width: $size_xlarge * 4;
                     font-weight:700;
+                    @media(max-width:820px) {
+                        min-width: $size_xlarge * 2;
+                    }
                 }}
+        }
+
+        .image-wrapper {
+            @media(max-width: 820px) {
+                width: 100%;
+            }
+            img {
+                @media(max-width: 820px) {
+                    width: 100%;
+                }
+            }
         }
     }
 
     
 }
 
+@mixin button-shadow {
+    box-shadow: 0px 0px $base-size / 2 rgba(0,0,0,0.2);
+    border-radius: $base-size / 2;
+}
+
 .toggle-button__container {
     display:flex;
     gap:$size_medium;
     padding: $size_medium 0;
+    align-items: center;
     & div {
         cursor:pointer;
+        &:hover {
+            @include button-shadow;
+            transition: all .2s linear;
+        }
+        &:active {
+            transform:scale(0.9)
+        }
         img{
             pointer-events: none;
+            padding: $base-size / 2;
+            width: $size_medium * 1.2;
+            padding: $base-size / 2;
+
+            &.active {
+                @include button-shadow;
+                transition: all .2s linear;
+            }
+        }
+    }
+}
+
+
+.filters {
+    &__wrapper {
+       @include space-between;
+       align-items: center;
+       @media(max-width: 820px) {
+        flex-wrap: wrap;
+        margin: $base-size 0;
         }
     }
 }
