--- a/my-app/src/sass/utilities.scss
+++ b/my-app/src/sass/utilities.scss
@@ -8,6 +8,11 @@
      justify-content: space-between;
 }
 
+@mixin flex-start {
+    @include flex;
+    justify-content: flex-start;
+}
+
 
 .v-padding {
     &-medium {
