--- a/my-app/src/sass/style.scss
+++ b/my-app/src/sass/style.scss
@@ -8,6 +8,10 @@
 @import './components/filters.scss';
 @import './components/loading.scss';
 @import './components/sidebar.scss';
+@import './components/draw.scss';
+
+
+
 main {
     background-color:$morty_white;
     color:#000000;
