--- a/my-app/src/sass/components/grid.scss
+++ b/my-app/src/sass/components/grid.scss
@@ -4,8 +4,18 @@
     row-gap:$size_large;
     column-gap: $size_medium;
 
-    &__item {
+    &__link {
         flex: 0 0 calc(100% / 4 - $base-size * 1.5);
+        text-decoration: none;
+        @media(max-width: 820px) {
+            flex: 0 0 calc(100% / 2 - $base-size * 1.5)
+        }
+        @media(max-width: 500px) {
+            flex: 0 0 calc(100%)
+        }
+    }
+
+    &__item {
         width:100%;
         display:flex;
         flex-direction: column;
@@ -15,12 +25,7 @@
         padding: 1rem;
         overflow: hidden;
         
-        @media(max-width: 820px) {
-            flex: 0 0 calc(100% / 2 - $base-size * 1.5)
-        }
-        @media(max-width: 500px) {
-            flex: 0 0 calc(100%)
-        }
+        
         &:hover {
             transform: scale(1.05);
             box-shadow: 1px 1px 16px 0px rgba(0,0,0,0.4);
